| Bug #763 | After RESET SLAVE, Relay_log_space in SHOW SLAVE STATUS is too much by 4 bytes | ||
|---|---|---|---|
| Submitted: | 30 Jun 2003 8:43 | Modified: | 2 Jul 2003 13:40 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | Any (all) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[30 Jun 2003 8:43]
Guilhem Bichot
[2 Jul 2003 13:40]
Guilhem Bichot
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at
http://www.mysql.com/doc/en/Installing_source_tree.html
changeset 1.1483 in 4.0
